# ur5e_egp50-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  patches.conf  tracks.yaml
config/: controllers.yaml  ur5e_egp50.srdf  zeros.yaml
launch/: bringup_realrobot.launch  gazebo.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ur5e_egp50_demo_upload.launch  ur5e_egp50_moveit_controller_manager.launch.xml  view_ur5e_egp50.launch  view_ur5e_egp50_demo.launch
ur5e_egp50_bringup/: CHANGELOG.rst  package.xml
ur5e_egp50_bringup/launch/: ur5e_bringup.launch  ur5e_egp50_bringup.launch
ur5e_egp50_description/: CHANGELOG.rst
ur5e_egp50_description/launch/: ur5e_egp50_upload.launch
ur5e_egp50_description/urdf/: ur5e_egp50_demo.urdf.xacro  ur5e_joint_limited_robot_egp50.urdf.xacro  ur5e_joint_limited_robot_egp50_demo.urdf.xacro
ur5e_egp50_moveit_config/: .setup_assistant  package.xml
ur5e_egp50_moveit_config/launch/: demo_gazebo.launch  demo_pick_place.launch  move_group.launch  trajectory_execution.launch.xml  ur5e_egp50_moveit_planning_execution.launch
urdf/: egp50.urdf.xacro  ur5e_egp50.urdf.xacro
