<?xml version="1.0"?>
<package>
  <name>ur5e_egp50_description</name>
  <version>1.2.6</version>
  <description>
      URDF description for Universal robot arm with robotiq gripper
  </description>

  <author email="kut@ipa.fraunhofer.de">ipa-kut</author>
  <maintainer email="kut@ipa.fraunhofer.de">ipa-kut</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>urdf</run_depend>
  <run_depend>pr2_description</run_depend>

  <export>
  </export>
</package>
