<?xml version="1.0"?>
<package format="2">
  <name>ur5e_egp50_bringup</name>
  <version>1.2.6</version>
  <description>The ur5e_egp50_bringup package</description>

  <author>ipa-rwu</author>
  <maintainer email="rwu@ipa.fraunhofer.de">ipa-rwu</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>roslaunch</test_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ur5e_egp50_description</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
  </export>
</package>
